# cw-secure-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  rooms.json  security-dashboard.html  setup.html  setup.sh  team-dashboard.html  team.json
.claude/: MEMORY.md  settings.json
.codex/: config.toml
.cw-secure/: add-secret.sh  guard-bash.sh  secure-mode.sh
.cwt/: .gitignore  cli.sh  cwt.html  framework-paths.txt  gemini.py  graph.py  manifest-approved.json  new-landing.html  rater.py  server.py  tasks.py
.cwt-build/: SPIKE_REPORT.md  conductor.html
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: pyproject.toml
blueprints/: _registry.json
cli/: package.json
docs/: approved-images.md  architecture.md  cw-integration.md  doppler-onboarding.md  getting-started.md  guardrails.html  index.html  okta-ticket-template.md  repo-governance.md  security-handbook.md  setup.html  team-guardrails.html  visualizer.html
frontend/: package.json
go/: .golangci.yml  Dockerfile  go.mod  main.go  main_test.go
knowledge/: index.md
python/: Dockerfile  alembic.ini  bandit.yaml  pyproject.toml
python/alembic/: env.py
python/src/: main.py
python/src/middleware/: __init__.py  audit.py  auth.py  ratelimit.py  requestid.py  requestsize.py
python/src/routes/: api.py  health.py  pages.py
python/src/static/: style.css
python/src/static/blueprint-map/: ai.js  app.js  parser.js  renderer.js  style.css  type-library.js
python/src/templates/: base.html  blueprint-map.html  dashboard.html
python/tests/: test_main.py
rooms/: README.md
scripts/: activity-log.sh  add-config.sh  add-secret.sh  adopt-claude-sections.md  adopt-merge-settings.py  adopt.sh  agent-review.sh  apply-blueprint.sh  auto-rooms.py  create-branch.sh  cwt-new-server.py  detect-framework.sh  doctor.sh  freeze.sh  gen-readme.sh  guard-bash.sh  guard.sh  init-project.sh  init-rooms.sh  install-cwt-cli.sh  join.sh  new-project.sh  open-pr.sh  promote.sh  repo-lint.sh  room-lint.sh  room-status.sh  upgrade.sh  (+7 more)
test-fixtures/baseline-python-sqlite/python/: Dockerfile  alembic.ini  pyproject.toml
test-fixtures/baseline-python-sqlite/python/migrations/: env.py
test-fixtures/baseline-python-sqlite/python/src/: main.py  worker.py
test-fixtures/baseline-python-sqlite/python/src/config/: settings.py
test-fixtures/baseline-python-sqlite/python/src/middleware/: auth.py  ratelimit.py  requestid.py
test-fixtures/baseline-python-sqlite/python/src/routes/: health.py
test-fixtures/baseline-python-sqlite/python/tests/: test_health.py
(+150 files in other folders)
