[project]
name = "test"
version = "0.1.0"
description = "test"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.10",
  "pydantic-settings>=2.5",
  "structlog>=24.1",
  "python-dotenv>=1.0",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "aiosqlite>=0.19",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-cov>=5", "ruff>=0.6", "bandit[toml]>=1.7", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B101"]
